--- a/uliweb_layout/templates/layout/1column.html
+++ b/uliweb_layout/templates/layout/1column.html
@@ -15,16 +15,24 @@
         {{include "layout/include/inc_container_topbar.html"}}
     {{end}}
 
+    {{block flash}}
+      {{include "layout/include/inc_flash.html"}}
+    {{end}}
+
     {{block content_wrapper}}
       <div class="content-wrapper">
         <div class="container">
-          {{include "layout/include/inc_container_content_wrapper.html"}}
+          {{include "layout/include/inc_content_wrapper.html"}}
         </div>
       </div>
     {{end}}
 
     {{block footer}}
-        {{include "layout/include/inc_container_footer.html"}}
+      <footer class="main-footer">
+        <div class="container">
+          {{include "layout/include/inc_footer.html"}}
+        </div>
+      </footer>
     {{end}}
 
 </div>
