--- a/uliweb_layout/templates/layout/include/inc_container_topbar.html
+++ b/uliweb_layout/templates/layout/include/inc_container_topbar.html
@@ -3,7 +3,7 @@
       <div class="container">
         <div class="navbar-header">
           {{block header_container_logo}}
-          <a href="{{=settings.LAYOUT.logo_url}}" class="navbar-brand">{{=settings.LAYOUT.logo_lg}}</a>
+          <a href="{{=settings.LAYOUT.get('logo_url', '/')}}" class="navbar-brand">{{=settings.LAYOUT.logo_lg}}</a>
           {{end}}
           {{block header_container_toggle_button}}
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse">
@@ -16,10 +16,7 @@
         {{block header_menu}}
         <div class="collapse navbar-collapse pull-left" id="navbar-collapse">
           {{block header_main_menu}}
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-            <li><a href="#">Link</a></li>
-          </ul>
+            {{include "layout/include/inc_main_menu.html"}}
           {{end}}
         </div>
         <!-- /.navbar-collapse -->
