add menu to uliweb_layout

--- a/uliweb_layout/layout/templates/layout/include/inc_common_resource.html
+++ b/uliweb_layout/layout/templates/layout/include/inc_common_resource.html
@@ -1,5 +1,5 @@
-{{use "jquery"}}
-{{use "jqueryui"}}
+{{use "jQuery"}}
+{{use "jQueryui"}}
 {{use "json2"}}
 {{use "bootstrap3"}}
 {{use "fontawesome"}}
