--- a/uliweb_layout/layout/templates/layout/1column.html
+++ b/uliweb_layout/layout/templates/layout/1column.html
@@ -5,7 +5,7 @@
 {{end}}
 
 {{block body}}
-<body id="layout-body" class="{{block body_class}}skin-blue-light{{end}} layout-top-nav">
+<body id="layout-body" class="{{block skin}}{{=settings.LAYOUT.get('skin', 'skin-blue-light')}}{{end}} {{block body_class}}{{end}} layout-top-nav">
 
 {{block container}}
 <div class="wrapper">
