新增添加sidebar menu （adminLTE）

--- a/uliweb_layout/templates/layout/2column_sidebar_test.html
+++ b/uliweb_layout/templates/layout/2column_sidebar_test.html
@@ -13,6 +13,7 @@
     {{block main-container}}
             {{block sidebar-container}}
             <aside class="main-sidebar {{block main-sidebar-export-class}}{{end}}">
+                {{include "layout/utils.html"}}
                 {{block sidebar}}
                 {{include "layout/include/inc_sidebar_test.html"}}
                 {{end}}
