--- a/uliweb_layout/templates/layout/basic_test.html
+++ b/uliweb_layout/templates/layout/basic_test.html
@@ -20,7 +20,9 @@
 </head>
 {{end}}
 <body id="themebody" class="{{block bodyclass}}hold-transition skin-blue sidebar-mini{{end}}">
+{{block params}}
 
+{{end}}
 {{block container}}
 {{end}}
 </body>
