--- a/uliweb_layout/templates/layout/include/inc_sidebar_test.html
+++ b/uliweb_layout/templates/layout/include/inc_sidebar_test.html
@@ -1,45 +1,68 @@
+<!-- sidebar: style can be found in sidebar.less -->
+<section class="sidebar">
 
-    <!-- sidebar: style can be found in sidebar.less -->
-    <section class="sidebar">
-
-      <!-- Sidebar user panel (optional) -->
-      <div class="user-panel">
+    <!-- Sidebar user panel (optional) -->
+    <div class="user-panel">
         <div class="pull-left image">
-          <img src="/static/assets/images/user1-128x128.jpg" class="img-circle" alt="User Image">
+            <img src="/static/assets/images/user1-128x128.jpg" class="img-circle" alt="User Image">
         </div>
         <div class="pull-left info">
-          <p>Alexander Pierce</p>
-          <!-- Status -->
-          <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
+            <p>Alexander Pierce</p>
+            <!-- Status -->
+            <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
         </div>
-      </div>
+    </div>
 
-      <!-- search form (Optional) -->
-      <form action="#" method="get" class="sidebar-form">
+    <!-- search form (Optional) -->
+    <form action="#" method="get" class="sidebar-form">
         <div class="input-group">
-          <input type="text" name="q" class="form-control" placeholder="Search...">
+            <input type="text" name="q" class="form-control" placeholder="Search...">
               <span class="input-group-btn">
                 <button type="submit" name="search" id="search-btn" class="btn btn-flat"><i class="fa fa-search"></i>
                 </button>
               </span>
         </div>
-      </form>
-      <!-- /.search form -->
+    </form>
+    <!-- /.search form -->
 
-      <!-- Sidebar Menu -->
-      <ul class="sidebar-menu">
-        <li class="header">HEADER</li>
+    <!-- Sidebar Menu -->
+    {{block sidebar_menu}}
+    <ul class="sidebar-menu">
         <!-- Optionally, you can add icons to the links -->
-        <li class="active"><a href="#"><i class="fa fa-link"></i> <span>Link</span></a></li>
-        <li><a href="#"><i class="fa fa-link"></i> <span>Another Link</span></a></li>
-        <li class="treeview">
-          <a href="#"><i class="fa fa-link"></i> <span>Multilevel</span> <i class="fa fa-angle-left pull-right"></i></a>
-          <ul class="treeview-menu">
-            <li><a href="#">Link in level 2</a></li>
-            <li><a href="#">Link in level 2</a></li>
-          </ul>
+        <li>
+            <a href="#">
+                <i class="fa fa-link"></i>
+                <span>Link</span>
+            </a>
         </li>
-      </ul>
-      <!-- /.sidebar-menu -->
-    </section>
-    <!-- /.sidebar -->
+        <li>
+            <a href="#">
+                <i class="fa fa-link"></i>
+                <span>Another Link</span>
+            </a>
+        </li>
+        <li class="treeview active">
+            <a href="#">
+                <i class="fa fa-link"></i>
+                <span>Multilevel</span>
+                <i class="fa fa-angle-left pull-right"></i>
+            </a>
+            <ul class="treeview-menu">
+                <li><a href="#">Link in level 2</a></li>
+                <li class="active">
+                    <a href="#">
+                        <span>Multilevel</span>
+                        <i class="fa fa-angle-left pull-right"></i>
+                    </a>
+                    <ul class="treeview-menu">
+                        <li><a href="#">Link in level 2</a></li>
+                        <li><a href="#">Link in level 2</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </li>
+    </ul>
+    {{end}}
+    <!-- /.sidebar-menu -->
+</section>
+<!-- /.sidebar -->
