add riot by default Fix menubar for sub menu items bug

--- a/uliweb_layout/layout/templates/layout/include/inc_common_resource.html
+++ b/uliweb_layout/layout/templates/layout/include/inc_common_resource.html
@@ -7,6 +7,7 @@
 {{use "adminlte"}}
 {{link "modules/uliweb-ui.css"}}
 {{link "modules/uliweb-ui.js"}}
+{{use "ui_riot"}}
 {{block other_use}}{{end}}
 {{use "ui_requirejs"}}
 <script type="text/javascript" src="{{=url_for_static('modules/config.js')}}" v="{{=settings.GLOBAL.STATIC_VER}}"></script>
