Fix layout and menu, add mailmenu and sidemenu to template environment

--- a/uliweb_layout/layout/templates/layout/2column_sidebar.html
+++ b/uliweb_layout/layout/templates/layout/2column_sidebar.html
@@ -1,39 +1,42 @@
 {{extend "layout/basic.html"}}
+
 {{block resources}}
 {{include "layout/include/inc_common_resource.html"}}
 {{end}}
 
 {{block body}}
-<body id="layout-body" class="{{block body_class}}{{=settings.LAYOUT.get('skin', 'skin-blue-light')}}{{end}} sidebar-mini">
+<body id="layout-body" class="{{block skin}}{{=settings.LAYOUT.get('skin', 'skin-blue-light')}}{{end}} sidebar-mini">
+
 {{block container}}
-<div class="wrapper">
+    <div class="wrapper">
 
-    {{block topbar}}
-    {{include "layout/include/inc_topbar.html"}}
-    {{end}}
+        {{block topbar}}
+        {{include "layout/include/inc_topbar.html"}}
+        {{end}}
 
-    {{block flash}}
-    {{include "layout/include/inc_flash.html"}}
-    {{end}}
-    <div class="container-fluid">
-        <div class="row-fluid">
-            {{block sidebar}}
-            {{include "layout/include/inc_sidebar_new.html"}}
-            {{end}}
+        {{block flash}}
+        {{include "layout/include/inc_flash.html"}}
+        {{end}}
 
-            {{block content_wrapper}}
+        {{block sidebar}}
+        {{include "layout/include/inc_sidebar.html"}}
+        {{end}}
+
+        {{block content_wrapper}}
             {{include "layout/include/inc_content_wrapper.html"}}
-            {{end}}
-        </div>
+        {{end}}
+
+
     </div>
 
-
-</div>
     {{block footer}}
     <footer class="main-footer">
         {{include "layout/include/inc_footer.html"}}
     </footer>
     {{end}}
-{{end}}
 
 {{include "layout/include/inc_pjax.html"}}
+{{end}}
+
+</body>
+{{end}}
