--- a/uliweb_layout/layout/templates/layout/include/inc_container_topbar.html
+++ b/uliweb_layout/layout/templates/layout/include/inc_container_topbar.html
@@ -15,7 +15,7 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         {{block header_menu}}
         <div class="collapse navbar-collapse pull-left" id="navbar-collapse">
-          {{block header_main_menu}}
+          {{block mainmenu}}
             {{include "layout/include/inc_main_menu.html"}}
           {{end}}
         </div>
