--- a/uliweb_layout/layout/templates/layout/include/inc_topbar.html
+++ b/uliweb_layout/layout/templates/layout/include/inc_topbar.html
@@ -21,6 +21,10 @@
       </a>
       {{end}}
 
+      {{block mainmenu}}
+        {{include "layout/include/inc_main_menu.html"}}
+      {{end}}
+
       <div class="navbar-custom-menu">
         {{block header_custom_menu}}
           {{include "layout/include/inc_custom_menu.html"}}
