--- a/uliweb_layout/layout/templates/layout/include/inc_common_resource.html
+++ b/uliweb_layout/layout/templates/layout/include/inc_common_resource.html
@@ -5,6 +5,7 @@
 {{use "ui.fontawesome"}}
 {{use "ui.ionicons"}}
 {{use "adminlte"}}
+{{use "ui.head"}}
 {{link "modules/uliweb-ui.css"}}
 {{link "modules/uliweb-ui.js"}}
 {{use "ui.riot"}}
