--- a/uliweb_layout/layout/templates/layout/full_column.html
+++ b/uliweb_layout/layout/templates/layout/full_column.html
@@ -6,7 +6,8 @@
 
 {{block body}}
 <style>
-    #layout-body .content-wrapper {border-left:none};
+    #layout-body .content-wrapper {border-left:none;}
+    #layout-body .container { width: 100%; }
 </style>
 <body id="layout-body" class="{{block skin}}{{=settings.LAYOUT.get('skin', 'skin-blue-light')}}{{end}} {{block body_class}}{{end}} layout-top-nav">
 
