--- a/uliweb_layout/layout/templates/layout/2column_sidebar_test.html
+++ b/uliweb_layout/layout/templates/layout/2column_sidebar_test.html
@@ -1,28 +1,28 @@
-{{extend "layout/basic_test.html"}}
+{{extend "layout/basic.html"}}
 {{block resources}}
-{{include "layout/include/inc_common_resource_test.html"}}
+{{include "layout/include/inc_common_resource.html"}}
 {{end}}
 {{block pagecss}}{{end}}
 {{block container}}
 <div class="wrapper {{block wrapper-export-class}}{{end}}">
     <header class="main-header" style="max-height:none">
         {{block topbar}}
-        {{include "layout/include/inc_topbar_test.html"}}
+        {{include "layout/include/inc_container_topbar.html"}}
         {{end}}
     </header>
     {{block main-container}}
             {{block sidebar-container}}
             <aside class="main-sidebar {{block main-sidebar-export-class}}{{end}}">
-                {{include "layout/utils.html"}}
+                {{include "layout/include/utils.html"}}
                 {{block sidebar}}
-                {{include "layout/include/inc_sidebar_test.html"}}
+                {{include "layout/include/inc_sidebar.html"}}
                 {{end}}
             </aside>
             {{end}}
             {{block content-container}}
             <div class="content-wrapper {{block content-wrapper-export-class}}{{end}}" style="min-height: 371px;">
                 {{block content}}
-                {{include "layout/include/inc_content_test.html"}}
+                {{include "layout/include/inc_content.html"}}
                 {{end}}
             </div>
             {{end}}
@@ -30,8 +30,9 @@
     {{block footer-container}}
     <footer class="main-footer {{block main-footer-export-class}}{{end}}">
         {{block footer}}
-        {{include "layout/include/inc_footer_test.html"}}
+
         {{end}}
+
     </footer>
     {{end}}
 </div>
