--- a/uliweb_layout/layout/templates/layout/1column.html
+++ b/uliweb_layout/layout/templates/layout/1column.html
@@ -1,14 +1,13 @@
 {{extend "layout/basic.html"}}
-
 {{block resources}}
     {{include "layout/include/inc_common_resource.html"}}
 {{end}}
-
+{{block pagecss}}{{end}}
 {{block body}}
 <body id="layout-body" class="{{block skin}}{{=settings.LAYOUT.get('skin', 'skin-blue-light')}}{{end}} {{block body_class}}{{end}} layout-top-nav">
-
 {{block container}}
 <div class="wrapper">
+
     {{block topbar}}
         {{include "layout/include/inc_container_topbar.html"}}
     {{end}}
