change sidebar position to content_wrapper add layout.css

--- a/uliweb_layout/layout/templates/layout/include/inc_content_wrapper.html
+++ b/uliweb_layout/layout/templates/layout/include/inc_content_wrapper.html
@@ -1,5 +1,9 @@
 <div class="content-wrapper" style="min-height: 916px">
 
+  {{block sidebar}}
+    {{include "layout/include/inc_sidebar.html"}}
+  {{end}}
+
   <!-- Content Header (Page header) -->
   {{block content_header}}
   <section class="content-header">
