--- a/uliweb_layout/layout/templates/layout/include/inc_common_resource.html
+++ b/uliweb_layout/layout/templates/layout/include/inc_common_resource.html
@@ -7,6 +7,7 @@
 {{use "adminlte"}}
 {{use "ui.head"}}
 
+{{link "layout.css"}}
 {{link "modules/uliweb-ui.css"}}
 {{link "modules/uliweb-ui.js"}}
 {{use "ui.riot"}}
