--- a/uliweb_layout/layout/templates/layout/include/inc_common_resource.html
+++ b/uliweb_layout/layout/templates/layout/include/inc_common_resource.html
@@ -6,9 +6,7 @@
 {{use "ui.ionicons"}}
 {{use "adminlte"}}
 {{use "ui.head"}}
-
 {{link "layout.css"}}
-{{link "modules/uliweb-ui.css"}}
-{{link "modules/uliweb-ui.js"}}
 {{use "ui.riot"}}
+{{use "ui.uliweb_ui"}}
 {{block other_use}}{{end}}
