--- a/uliweb_layout/layout/static/layout.css
+++ b/uliweb_layout/layout/static/layout.css
@@ -8,3 +8,6 @@
 .content-header {padding-bottom: 15px;}
 #layout-body {font-size: 14px; font-family: "微软雅黑";}
 .main-footer {background-color: #3c8dbc; color: #e0e0e0;margin-left:0}
+#layout-body .content-wrapper {border-left:none}
+#layout-body.full .main-header .container { width: 100%; }
+#layout-body.full .content-wrapper > .container { width: 100%; padding: 0; }
